git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@437 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -137,6 +137,7 @@
 												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../repedoctacliente/startup.agnux">Estados de Cuenta</a></li>
+													<li class="topline"><a href="../repanticiposnoaplicados/startup.agnux">Anticipos no Aplicados</a></li>
 													<li class="topline"><a href="../repcobranzadiaria/startup.agnux">Relaci&oacute;n de Cobranza Diaria</a></li>
 													<li class="topline"><a href="../reppronoscobranza/startup.agnux">Proyecci&oacute;n de Cobranza</a></li>
 													<li class="topline"><a href="../repventasnetasxcliente/startup.agnux">Ventas Netas por Cliente</a></li>
