git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@443 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -481,10 +481,12 @@
 													<li class="topline"><a href="../crmregistrocasos/startup.agnux">Registro de Casos</a></li>
 												</ul>
 											</li>
+											
 											<li>
-												<a href="#" class="sub">Cansultas&raquo;</a>
+												<a href="#" class="sub">Consultas &raquo;</a>
 												<ul>
-													<li class ="topline"><a href="../crmconsultas/startup.agnux">Consultas</li>
+													<li class="topline"><a href="../crmconsultas/startup.agnux">Consultas</a></li>
+													
 												</ul>
 											</li>
 										</ul>
