--- a/erp-quimicos/src/main/webapp/css/modalbox/cotizaciones/formaCotizacion.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/cotizaciones/formaCotizacion.css
@@ -101,8 +101,8 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .cotizacions_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-    width:913px;
-    height:480px;
+    width:1213px;
+    height:460px;
     border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -113,7 +113,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 .cotizacions_div_two{
     /*font-family:tahoma;*/
-    width:913px;
+    width:1213px;
     height:28px;
     background-color:#454442;
     margin-top:0;
@@ -139,7 +139,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .cotizacions_div_three{
     /*font-family:tahoma;*/
     font-size:11px;
-    width:903px;
+    width:1203px;
     height:48px;
     background-color:#e9e9e9;
     margin-top:5px;
@@ -158,7 +158,6 @@ font-size:11px;
 }
 
 
-
 #grid_productos td{
 	height:18px;
 	text-align:center;
@@ -175,4 +174,36 @@ font-size:11px;
 .borde_oculto{
 	border-color:transparent; 
 	background:transparent;
+}
+
+
+.gral input{
+	height:15px;
+}
+
+.gral select{
+	height:17px;
+}
+
+table tr td.grid {
+	background: #fff;
+	border-right: 1px solid #ccc;
+	padding: 2px;
+	text-align: center;
+	vertical-align: top;
+}
+table tr td.grid1 {
+	background: #fff;
+	border-right: 1px solid #ccc;
+	padding: 2px;
+	text-align: left;
+	vertical-align: top;
+}
+
+table tr td.grid2 {
+	background: #fff;
+	border-right: 1px solid #ccc;
+	padding: 2px;
+	text-align: right;
+	vertical-align: top;
 }
